<resources>
    <string name="app_name">Collect App</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="collect">Collect</string>
    <string name="welcome">Welcome</string>
    <string name="Header">Collect</string>
    <string name="qoute">Your one stop items collection App</string>
    <string name="logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="menu">Menu</string>
    <string name="textview">TextView</string>
    <string name="title_activity_object_details">ObjectDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_item">Add Category</string>
    <string name="note_progress">View Your Progress</string>
    <string name="title_activity_add_item">AddItem</string>
</resources>